# Camda24_resistance

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Familias de genes que determinan el fenotipo susceptible-resistente al Meropenem.pptx  Makefile  README.md  cspell.json  environment.yml  notes.md  pyproject.toml  requirements.txt
DataSets/: MIC_categorizado  PangenomeCountPseudomonas.tsv.bz2  README  README.md  ResistanceCategories.tsv  ResistanceCountStrict.tsv  TestingDataset.csv  TrainingDataset.csv  TrainingDatasetFixed.csv
Docker/: README.md
Notebooks/: Analisis_TDA.ipynb  KotaroKarnelPCA.ipynb  MIC-prediction-LASSO.ipynb  Modelos_AMR_pangenome_ciprofloxacin.ipynb  Modelos_con_AMR.ipynb  My_prediction-BiologicFiltered-LASSO.ipynb  My_prediction-LASSO.ipynb  My_prediction-joint_SNPs-LASSO.ipynb  Neural_network (2).ipynb  PCA.ipynb  Pangenoma1.py  Pangenoma2.py  Predicciones_Pangenomas.ipynb  RandForestResistStrict.py  Readme.md  SelectedVariables_PCA_modelos.ipynb  UMAP_2D.ipynb  camda_functions.py  crossvalid.ipynb  modelos_armcount.py  redes_camda24.ipynb  resistance_amr_counts.ipynb  resistance_amr_counts_BioFiltered_RF-XGBoost.ipynb  umap-camda24.ipynb
Prediction/: TestingDatasetTemplate-1.csv
camda/: Data_Preprocessing.ipynb  Models_complement.ipynb  Untitled1.ipynb  combined_data.ipynb  models_complement.ipynb
env/: README.md  requirements.txt
notebooks/: model_dev.ipynb  rf_lg_models.ipynb
src/: complete_train.py  config.py  driver.py  evaluate.py  experiment.py  nested_cv_tune.py  tune.py  utils.py  validation.py
src/common/: utils.py
(+60 files in other folders)
